--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -25,42 +25,8 @@ browse-buttons: true # true/false, adds previous/next arrows to item pages
 #
 subjects-fields: subject;creator # set the field to be featured in the cloud (if left blank, none will be generated)
 subjects-min: 1 # min size for subject cloud, too many terms = slow load time!
-subjects-stopwords: # work;history;exhibition;progress;museum;worker;heritage # set of subjects separated by ;, e.g. boxers;boxing
+subjects-stopwords: # megan;cumming;megan cumming # set of subjects separated by ;, e.g. boxers;boxing
 
-##########
-# LOCATIONS PAGE
-#
-locations-fields:  # set the field to be featured in the cloud
-locations-min: 1 # min size for subject cloud, too many terms = slow load time!
-locations-stopwords: # set of subjects separated by ; that will be removed from display, e.g. boxers;boxing
-
-##########
-# MAP PAGE
-#
-# see _data/map-config.csv for field display options
-latitude: 46.727485 #to determine center of map
-longitude: -117.014185 #to determine center of map
-zoom-level: 5 # zoom level for map 
-map-base: Esri_WorldStreetMap # set default base map, choose from: Esri_WorldStreetMap, Esri_NatGeoWorldMap, Esri_WorldImagery, OpenStreetMap_Mapnik
-map-search: false # true/false, not suggested with large collections
-map-search-fuzziness: 0.35 # fuzzy search range from 1 = anything to 0 = exact match only
-map-cluster: false # true/false, suggested for large collection or with many items in same location
-map-cluster-radius: 25 # size of clusters, from ~ 10 to 80
-
-##########
-# TIMELINE PAGE
-#
-year-navigation: #"" # set years to appear in dropdown nav, leave blank to auto gen
-year-nav-increment: 5 # set increments when auto gen nav years
-
-##########
-# DATA 
-#
-# add metadata fields for export in data downloads (tip: paste in first row of csv)
-# comma delimited list, reference url is automatic
-metadata-export-fields: "title,creator,date,description,subject,location,latitude,longitude,source,identifier,type,format,language,rights,rightsstatement"
-# generate a facets list for given fields, comma delimited
-metadata-facets-fields: "subject,creator,format"
 
 ##########
 # COMPOUND OBJECTS
